--- a/SuperMarket/src/log4j.properties
+++ b/SuperMarket/src/log4j.properties
@@ -1,10 +1,11 @@
-log4j.rootLogger=INFO,console,file
+log4j.rootLogger=INFO,stdout,file
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.SimpleLayout
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.file=../logs/schoollog.log
+#log4j.appender.file.file=d:/logs/schoolMaterials.log
 log4j.appender.file.encoding=GBK
 log4j.appender.file.DatePattern=yyyy-MM-dd'.log'
 log4j.appender.file.Append=true
