--- a/SuperMarket/src/log4j.properties
+++ b/SuperMarket/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO,stdout,file
+log4j.rootLogger=INFO,console,file
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.SimpleLayout
